maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: not found: value c
override def run() {while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (aMurN() && getY() !=0 && c!=0) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                                                                                             ^